update Swift-T to use string index arrays

--- a/XSEDE.config
+++ b/XSEDE.config
@@ -11,11 +11,11 @@ site.comet {
             maxNodesPerJob  : 1                       # Nodes per job
             tasksPerNode    : 24                      # Tasks per Node
             maxJobTime      : "00:30:00"              # Time requested per job
-	    jobQueue        : "compute"               # Submit to compute partition (from shared)
+	          jobQueue        : "compute"               # Submit to compute partition (from shared)
         }
     }
     staging             : "local"                     # Stage files from "local" fs to compute nodes
-    workDirectory       : "/tmp/"${env.USER}"/swiftwork" # Work dir on compute nodes
+    workDirectory       : "/tmp/edrodri2/swiftwork" # Work dir on compute nodes
     maxParallelTasks    : 101                         # Maximum number of parallel tasks
     initialParallelTasks: 100                         # Maximum number of tasks at start
     app.ALL { executable: "*" }                       # All apps to be found from commandline
