--- a/swift.config
+++ b/swift.config
@@ -6,7 +6,7 @@ site.localhost {
         URL : "localhost"
     }
     staging             : local
-    workDirectory       : "../Variant-Calling-Data/tmp/Swift"
+    workDirectory       : "/tmp/Swift"
     maxParallelTasks    : 20
     initialParallelTasks: 20
     app.ALL { executable: "*" }
