--- a/XSEDE.config
+++ b/XSEDE.config
@@ -1,24 +1,24 @@
-sites:[comet]
+sites: [stampede]
 
-site.comet {
+site.stampede {
     execution {
         type      : "coaster"                         # Use coasters to run on remote sites
-        URL       : "comet.sdsc.xsede.org"            # Comet login URL - not used for local:slurm
-        jobManager: "local:slurm"                     # use slurm commands to submit jobs locally
+        URL       : "login3.stampede.tacc.utexas.edu" # Stampede login nodes login[1..4].stampede.tacc.utexas.edu
+        jobManager: "local:slurm"                    # Use ssh-cl to connect, slurm is the Local resource manager
         options {
-            maxJobs         : 4                       # Max jobs submitted to LRM
+            maxJobs         : 1                       # Max jobs submitted to LRM
             nodeGranularity : 1                       # Nodes per job
             maxNodesPerJob  : 1                       # Nodes per job
-            tasksPerNode    : 24                      # Tasks per Node
-            maxJobTime      : "00:30:00"              # Time requested per job
-	          jobQueue        : "compute"               # Submit to compute partition (from shared)
+            tasksPerNode    : 4                       # Tasks per Node
+            jobQueue        : "development"           # Select queue from (development, normal, large)
+            maxJobTime      : "00:25:00"              # Time requested per job
         }
     }
-    staging             : "local"                     # Stage files from "local" fs to compute nodes
-    workDirectory       : "/tmp/edrodri2/swiftwork" # Work dir on compute nodes
+    staging             : "local"                     # Stage files from "local" system to Midway
+    workDirectory       : "/tmp/edrodri2/swiftwork" # Location for intermediate files
     maxParallelTasks    : 101                         # Maximum number of parallel tasks
     initialParallelTasks: 100                         # Maximum number of tasks at start
-    app.ALL { executable: "*" }                       # All apps to be found from commandline
+    app.ALL { executable: "*" }                       # All tasks to be found from commandline
 }
 
 TCPPortRange: "50000,51000"
