Add generic runfile

--- a/swift.config
+++ b/swift.config
@@ -12,6 +12,83 @@ site.localhost {
     app.ALL { executable: "*" }
 }
 
+site.stampede {
+    execution {
+        type      : "coaster"                       # Use coasters to run on remote sites
+        URL       : "stampede.tacc.utexas.edu"      # Stampede login node to launch the service on
+        jobManager: "ssh:slurm"                     # Use ssh-cl to connect, slurm is the Local resource manager
+        options {
+            maxJobs         : 1                       # Max jobs submitted to LRM
+            nodeGranularity : 1                       # Nodes per job
+            maxNodesPerJob  : 1                       # Nodes per job
+            tasksPerNode    : 4                       # Tasks per Node
+            jobQueue        : "development"           # Select queue from (development, normal, large)
+            maxJobTime      : "00:25:00"              # Time requested per job
+        }
+    }
+    staging             : "local"                     # Stage files from "local" system to Midway
+    workDirectory       : "/tmp/"${env.USER}"/swiftwork" # Location for intermediate files
+    maxParallelTasks    : 101                         # Maximum number of parallel tasks
+    initialParallelTasks: 100                         # Maximum number of tasks at start
+    app.ALL { executable: "*" }                       # All tasks to be found from commandline
+}
+
+# Configuration for Blue Waters at the NCSA
+site.bluewaters {
+    execution {
+        type      : "coaster"                         # Use coasters to run on remote sites
+        URL       : "bw.ncsa.illinois.edu"            # BW login URL - not used for local:pbs
+        jobManager: "local:pbs"                       # use PBS commands to submit jobs locally
+        options {
+            maxJobs         : 1                       # Max jobs submitted to LRM
+            nodeGranularity : 2                       # Nodes per job
+            maxNodesPerJob  : 2                       # Nodes per job
+            tasksPerNode    : 1                       # Tasks per Node
+            maxJobTime      : "00:30:00"              # Time requested per job
+	          jobQueue        : "normal"                # Submit to "normal" queue
+            jobOptions {
+	             jobType: "single"
+               ppn         : "16"                    # Virtual processors per node per Job
+            }
+        }
+    }
+
+    staging             : "direct"                    # Directly access files from the shared filesystem
+    workDirectory       : "/u/training/"${env.USER}"/swiftwork" # Work dir on compute nodes
+    maxParallelTasks    : 101                         # Maximum number of parallel tasks
+    initialParallelTasks: 100                         # Maximum number of tasks at start
+    app.ALL {
+            executable: "*"                           # All apps to be found from PATH
+    }
+}
+site.iforge {
+    execution {
+        type      : "coaster"                         # Use coasters to run on remote sites
+        URL       : "iforge.ncsa.illinois"            # BW login URL - not used for local:pbs
+        jobManager: "ssh:pbs"                       # use PBS commands to submit jobs locally
+        options {
+            maxJobs         : 1                       # Max jobs submitted to LRM
+            nodeGranularity : 2                       # Nodes per job
+            maxNodesPerJob  : 2                       # Nodes per job
+            tasksPerNode    : 1                       # Tasks per Node
+            maxJobTime      : "00:30:00"              # Time requested per job
+	          jobQueue        : "normal"                # Submit to "normal" queue
+            jobOptions {
+	             jobType: "single"
+               ppn         : "16"                    # Virtual processors per node per Job
+            }
+        }
+    }
+
+    staging             : "direct"                    # Directly access files from the shared filesystem
+    workDirectory       : "/u/training/"${env.USER}"/swiftwork" # Work dir on compute nodes
+    maxParallelTasks    : 101                         # Maximum number of parallel tasks
+    initialParallelTasks: 100                         # Maximum number of tasks at start
+    app.ALL {
+            executable: "*"                           # All apps to be found from PATH
+    }
+}
+
 TCPPortRange: "50000,51000"
 lazyErrors: false
 executionRetries: 4
